<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <Button
        android:id="@+id/optionSaveGallery"
        style="@style/Widget.MapOverlay.GlassButton.Accent"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="10dp"
        android:text="@string/save_gallery" />

    <Button
        android:id="@+id/optionShareFile"
        style="@style/Widget.MapOverlay.GlassButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="10dp"
        android:text="@string/share_as_file" />

    <Button
        android:id="@+id/optionSharePhoto"
        style="@style/Widget.MapOverlay.GlassButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/share_as_photo" />

</LinearLayout>
